* fix for wrong position of the karyotype viewpoint

--- a/css/karyotype.css
+++ b/css/karyotype.css
@@ -76,3 +76,23 @@
   cursor:-moz-grab;
   cursor:-webkit-grab;  
 }
+
+.ui-resizable-e {
+    cursor: e-resize;
+    height: 100%;
+    right: -5px;
+    top: 0;
+    width: 7px;
+}
+.ui-resizable-w {
+    cursor: w-resize;
+    height: 100%;
+    left: -5px;
+    top: 0;
+    width: 7px;
+}
+.ui-resizable-handle {
+    display: block;
+    font-size: 0.1px;
+    position: absolute;
+}
